Fixes, see desc
- Create devtool to read classnames and tags
- Move main assignment button
- Alphabetic on descriptions list in main assignment
- Description regexp does not handle dot
- Scrollbars in code editor

--- a/app/modules/course/components/CodeEditor/styles.css
+++ b/app/modules/course/components/CodeEditor/styles.css
@@ -12,7 +12,7 @@
   background-color: #202634;
   width: 100%;
   display: inline-block;
-  height: calc(100% - 56px);
+  height: calc(100% - 76px);
 }
 
 .run {
