--- a/app/modules/course/components/Tiers/styles.css
+++ b/app/modules/course/components/Tiers/styles.css
@@ -92,3 +92,65 @@
   left: 0;
   position: absolute;
 }
+
+.mainAssignmentWrapper {
+  height: 100px;
+}
+
+.mainAssignmentButton {
+  width: 180px;
+  margin-top: 60px;
+}
+
+.startMainAssignmentPopup {
+  width: 400px;
+  background-color: #202633;
+  border-radius: 5px;
+  padding: 15px;
+  position: absolute;
+  left: 50%;
+  margin-left: -200px;
+  z-index: 5;
+  box-sizing: border-box;
+  border: 2px solid #1c222e;
+  opacity: 1;
+  display: block;
+  transition: opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  margin-top: 110px;
+}
+
+.hidden {
+  composes: startMainAssignmentPopup;
+  opacity: 0;
+  display: none;
+}
+
+.startMainAssignmentButton {
+  display: block;
+}
+
+.mainAssignmentNameInput {
+  background-color: #fff;
+  color: #202634;
+}
+
+.mainAssignmentArrow {
+  position: absolute;
+  border-left: 13px solid transparent;
+  border-right: 13px solid transparent;
+  border-bottom: 13px solid #202633;
+  top: -13px;
+  z-index: 3;
+  left: 50%;
+  margin-left: -13px;
+}
+
+.mainAssignmentArrowBorder {
+  composes: mainAssignmentArrow;
+  border-bottom: 15px solid #1c222e;
+  border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+  top: -15px;
+  z-index: 2;
+  margin-left: -15px;
+}
